<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"

        tools:context="inacaptemuco.cl.primeraevaluacion.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tp_titulo_aplicacion"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:text="@string/datos_ingresados"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/etiqueta_patente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_patente"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_patente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marca:"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultados_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_modelo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_año"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_anio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_UF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_antiguedad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_antiguedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_estado"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_asegurado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_valorSeguro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultado_valorSeguro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>